[package]
name = "klein"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread","time"] }
toml = "0.8.12"
pico-args = "0.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7.5"
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
ureq = "2.9.6"
lazy_static = "1.4.0"
serde_json = "1.0.116"
prometheus = "0.13.4"
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] } # random generators for server ids